src/objects/Savings_Account__c.object
<CustomObject>
    <description>Savings accounts can be created for saving products already defined in MFIForce. They inherit the rules and defaults from the product definition.
Savings accounts can be created for an individual or a group depending on the definition of the product.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Savings Accounts</relationshipLabel>
        <relationshipName>Savings_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>This field stores transaction balance done till now. This field is renamed to &apos;Transaction Balance&apos; Field from &apos;Balance&apos; field.</description>
        <label>Transaction Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Office_Name__c</referenceTo>
        <relationshipLabel>Savings Accounts</relationshipLabel>
        <relationshipName>Savings_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center</label>
        <referenceTo>Center__c</referenceTo>
        <relationshipLabel>Savings Accounts</relationshipLabel>
        <relationshipName>Savings_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client_ID</description>
        <inlineHelpText>Client_ID</inlineHelpText>
        <label>Client ID</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Savings Account</relationshipLabel>
        <relationshipName>Savings_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Savings Accounts</relationshipLabel>
        <relationshipName>Savings_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deposit_Start_Date__c</fullName>
        <description>Deprecated.</description>
        <label>Deposit Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fee Set</description>
        <inlineHelpText>Fee Set</inlineHelpText>
        <label>Fee Set</label>
        <referenceTo>Fee_Set__c</referenceTo>
        <relationshipLabel>Savings Account</relationshipLabel>
        <relationshipName>Savings_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fixed_Deposit_Amount__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Fixed Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fixed_Deposit_End_Date__c</fullName>
        <label>Fixed Deposit End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fixed_Deposit_Term__c</fullName>
        <label>Fixed Deposit Term (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Savings Accounts</relationshipLabel>
        <relationshipName>Savings_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_to_be_Posted__c</fullName>
        <label>Interest to be Posted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Deposit_Date__c</fullName>
        <label>Last Deposit Date</label>
        <summarizedField>Savings_Payment_Transaction__c.Transaction_Date__c</summarizedField>
        <summaryForeignKey>Savings_Payment_Transaction__c.Savings_Account__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Linked_Savings_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked Current Account</label>
        <referenceTo>Savings_Account__c</referenceTo>
        <relationshipLabel>Savings Accounts</relationshipLabel>
        <relationshipName>Savings_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minimum_Balance__c</fullName>
        <label>Minimum Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Calc_Date__c</fullName>
        <label>Next Interest Calc Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Posting_Date__c</fullName>
        <label>Next Interest Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_Txns__c</fullName>
        <label>No of Txns</label>
        <summaryForeignKey>Savings_Payment_Transaction__c.Savings_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opening_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This will contain balance present in account on GO LIVE date.</description>
        <label>Opening Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommended_Mandatory_Amnt_for_Deposits__c</fullName>
        <description>Recommended/ Mandatory Amnt for Deposits
Inherited from product definition</description>
        <inlineHelpText>Recommended/Mandatory Amnt for Deposits
Inherited from product definition</inlineHelpText>
        <label>Recommended/Mandatory Amnt for Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Savings_Account_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Savings Account External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Savings_Deposit_Count__c</fullName>
        <label>Savings Deposit Count</label>
        <summaryFilterItems>
            <field>Savings_Payment_Transaction__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Deposit</value>
        </summaryFilterItems>
        <summaryForeignKey>Savings_Payment_Transaction__c.Savings_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Savings_Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Savings Product Name</description>
        <inlineHelpText>Savings Product Name</inlineHelpText>
        <label>Savings Product Name</label>
        <referenceTo>Savings_Product__c</referenceTo>
        <relationshipLabel>Savings Account</relationshipLabel>
        <relationshipName>Savings_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Share_Capital_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Share Capital Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Application</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Balance__c</fullName>
        <description>This is formula field which shows total balance in account by adding opening balance &amp; transactions balance.</description>
        <formula>Opening_Balance__c  +  Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Deposit__c</fullName>
        <label>Total Deposit</label>
        <summarizedField>Savings_Payment_Transaction__c.Transaction_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Savings_Payment_Transaction__c.Cleared__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Savings_Payment_Transaction__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Deposit</value>
        </summaryFilterItems>
        <summaryForeignKey>Savings_Payment_Transaction__c.Savings_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Interest_Earned__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Interest Earned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Overdue__c</fullName>
        <label>Total Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Withdrawal__c</fullName>
        <label>Total Withdrawal</label>
        <summarizedField>Savings_Payment_Transaction__c.Transaction_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Savings_Payment_Transaction__c.Cleared__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Savings_Payment_Transaction__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Withdrawal</value>
        </summaryFilterItems>
        <summaryForeignKey>Savings_Payment_Transaction__c.Savings_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Uncleared_Check_Deposit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Uncleared Check Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uncleared_Check_Withdrawal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Uncleared Check Withdrawal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uncleared_Deposit_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Uncleared Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uncleared_Withdrawal_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Uncleared Withdrawal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Savings Account</label>
    <listViews>
        <fullName>Active_Savings_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Branch__c</columns>
        <columns>Center__c</columns>
        <columns>Savings_Product_Name__c</columns>
        <columns>Balance__c</columns>
        <columns>Approval_Date__c</columns>
        <columns>Next_Calc_Date__c</columns>
        <columns>Next_Posting_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Savings Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SAN-{0000000000}</displayFormat>
        <label>Savings Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IE00000000Jx4MAE_00NE0000000GWzyMAG</fullName>
        <active>true</active>
        <errorMessage>Please select an active Client.</errorMessage>
        <field>Savings_Payment_Collection_Record__c.Savings_Account__c</field>
        <filterItems>
            <field>Savings_Account__c.Client_ID__r.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Savings Payment Collection Record_Saving</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE000000042AQMAY_00NE0000003aAzRMAU</fullName>
        <active>true</active>
        <errorMessage>The Savings Account you have selected is not Active. Please check its status.</errorMessage>
        <field>Teller_Cash_Transaction__c.Savings_Account__c</field>
        <filterItems>
            <field>Savings_Account__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Teller Cash Transaction_Savings Account</name>
    </namedFilters>
    <pluralLabel>Savings Accounts</pluralLabel>
    <recordTypes>
        <fullName>Fixed</fullName>
        <active>true</active>
        <description>The type of this account is a Fixed Deposit.</description>
        <label>Fixed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Savings</fullName>
        <active>true</active>
        <description>The type of this account is either Savings or Current</description>
        <label>Savings</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Clients_Status_check</fullName>
        <active>false</active>
        <description>Clients_Status_check</description>
        <errorConditionFormula>NOT(ISPICKVAL( Client_ID__r.Status__c ,&quot;Active&quot;))</errorConditionFormula>
        <errorMessage>Client is not Approved/Active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deposit_Start_Date_check</fullName>
        <active>true</active>
        <description>Deposit_Start_Date_check</description>
        <errorConditionFormula>AND( (Deposit_Start_Date__c &lt;  TODAY()),( PRIORVALUE(Deposit_Start_Date__c)  &lt;&gt; Deposit_Start_Date__c  ))</errorConditionFormula>
        <errorDisplayField>Deposit_Start_Date__c</errorDisplayField>
        <errorMessage>Start Date can&apos;t be in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Link_Current_Account_to_FD</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISNULL(Linked_Savings_Account__c)
||
ISPICKVAL( Savings_Product_Name__r.Product_Type__c ,&apos;Fixed&apos;))</errorConditionFormula>
        <errorMessage>You can only link a current account with a fixed deposit. This account is not a Fixed Deposit. Please check the Savings Product Type.</errorMessage>
    </validationRules>
</CustomObject>